// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should not render correctly when modal is closed i.e. open prop is false 1`] = `""`;

exports[`Modal should render Modal component correctly when type prop is addMeal 1`] = `
<div
  className="modal show"
  id="meal-modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <div
        className="modal-title"
      >
        <h3
          id="modal-title-h3"
        >
          Add a Meal
        </h3>
      </div>
      <CloseIcon
        btnID="modal-close-icon"
        clickHandler={[Function]}
        divClass={null}
      />
    </div>
    <hr />
    <div
      className="modal-body"
    >
      <MealModal
        meal={null}
        open={true}
        submitting={false}
        toggleModal={[MockFunction]}
        type="addMeal"
      />
    </div>
  </div>
</div>
`;

exports[`Modal should render connected Modal component correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Modal)
    open={true}
    toggleModal={[MockFunction]}
    type="addMeal"
  >
    <Modal
      open={false}
      toggleModal={[Function]}
      type={null}
    />
  </Connect(Modal)>
</Provider>
`;

exports[`Modal should render correctly when type prop is deleteMeal 1`] = `
<div
  className="modal show"
  id="meal-modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <div
        className="modal-title"
      >
        <h3
          id="modal-title-h3"
        >
          Delete Meal
        </h3>
      </div>
      <CloseIcon
        btnID="modal-close-icon"
        clickHandler={[Function]}
        divClass={null}
      />
    </div>
    <hr />
    <div
      className="modal-body"
    >
      <Connect(DeleteMealModal)
        open={true}
        submitting={false}
        toggleModal={[MockFunction]}
        type="deleteMeal"
      />
    </div>
  </div>
</div>
`;

exports[`Modal should render correctly when type prop is deleteSuccessMsg 1`] = `
<div
  className="modal show"
  id="meal-modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <div
        className="modal-title"
      >
        <h3
          id="modal-title-h3"
        >
          Delete Meal
        </h3>
      </div>
      <CloseIcon
        btnID="modal-close-icon"
        clickHandler={[Function]}
        divClass={null}
      />
    </div>
    <hr />
    <div
      className="modal-body"
    >
      <p
        className="text-center"
      >
        Meal Deleted Successfully
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal should render correctly when type prop is editMeal 1`] = `
<div
  className="modal show"
  id="meal-modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <div
        className="modal-title"
      >
        <h3
          id="modal-title-h3"
        >
          Edit Meal
        </h3>
      </div>
      <CloseIcon
        btnID="modal-close-icon"
        clickHandler={[Function]}
        divClass={null}
      />
    </div>
    <hr />
    <div
      className="modal-body"
    >
      <MealModal
        meal={null}
        open={true}
        submitting={false}
        toggleModal={[MockFunction]}
        type="editMeal"
      />
    </div>
  </div>
</div>
`;

exports[`Modal should render correctly when type prop is menu 1`] = `
<div
  className="modal show"
  id="meal-modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <div
        className="modal-title"
      >
        <h3
          id="modal-title-h3"
        >
          Select Meal Options
        </h3>
      </div>
      <CloseIcon
        btnID="modal-close-icon"
        clickHandler={[Function]}
        divClass={null}
      />
    </div>
    <hr />
    <div
      className="modal-body"
    >
      <MenuModal />
    </div>
  </div>
</div>
`;

exports[`Modal should render correctly when type prop is orderCanceledMsg 1`] = `
<div
  className="modal show"
  id="meal-modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <div
        className="modal-title"
      >
        <h3
          id="modal-title-h3"
        />
      </div>
      <CloseIcon
        btnID="modal-close-icon"
        clickHandler={[Function]}
        divClass={null}
      />
    </div>
    <hr />
    <div
      className="modal-body"
    >
      <p
        className="text-center"
      >
        Order Canceled Successfully
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal should render correctly when type prop is orderSuccessMsg 1`] = `
<div
  className="modal show"
  id="meal-modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <div
        className="modal-title"
      >
        <h3
          id="modal-title-h3"
        />
      </div>
      <CloseIcon
        btnID="modal-close-icon"
        clickHandler={[Function]}
        divClass={null}
      />
    </div>
    <hr />
    <div
      className="modal-body"
    >
      <p
        className="text-center"
      >
        Thank you for your order. Your belly will be filled up shortly
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal should render null when type prop is unknown 1`] = `
<div
  className="modal show"
  id="meal-modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <div
        className="modal-title"
      >
        <h3
          id="modal-title-h3"
        />
      </div>
      <CloseIcon
        btnID="modal-close-icon"
        clickHandler={[Function]}
        divClass={null}
      />
    </div>
    <hr />
    <div
      className="modal-body"
    />
  </div>
</div>
`;
